--- a/site/css/main.styl
+++ b/site/css/main.styl
@@ -1,2 +1,15 @@
+html
+  height 100%
+  padding 0 5px
+
+
+body
+  display flex;
+  flex-direction column
+  width: 100%
+  height: 100%
+  margin: 0
+
+
 div#map
-  height 300px
+  flex 1
